<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Formulario">

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_titulo"/>

    <ImageButton
        android:id="@+id/ibImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_def_app_icon"/>

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_fecha"/>

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_autor"/>

    <EditText
        android:id="@+id/etContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_contenido"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancelar"/>

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_guardar"/>

    </LinearLayout>

</LinearLayout>